# routes/info.js
@@ -1,6 +1,7 @@
 const express = require('express'),
   router = express.Router(),
-  infoHandler = require('../handlers/infoHandler');
+  infoHandler = require('../handlers/infoHandler'),
+  authMiddleware = require('../middlewares/authMiddleware');
 router.post('/backendId/:domainType/:serverIp', infoHandler.fetchBackendId);
 router.get('/domain/:domainType/:siteName', infoHandler.fetchDomains);
 router.get('/valid-domain/:client/:domainType/:whitelabelName', infoHandler.getValidDomain);
@@ -9,5 +10,6 @@ router.get('/server/:domainType/:siteName', infoHandler.fetchServers);
 router.get('/folder', infoHandler.fetchFolderPath);
 router.get('/mobile/', infoHandler.fetchMobileJson);
 router.get('/server/', infoHandler.getServerInfo);
+router.get('/temppage/', authMiddleware, infoHandler.fetchTempPage);
 router.get('/', (_, res) => res.send('info root page'));
 module.exports = router;
